--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,61 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
+/* regole container */
+.container {
+    margin: 0 auto;
+    padding-top: 3rem;
+    max-width: 1300px;
+    text-align: center;
+}
+
+/* regole header */
+header {
+    margin-bottom: 2rem;
+}
+.image-container{
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+}
+.image-container img {
+    max-width: 100%;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+/* regole card */
+.card {
+    margin: 0 auto;
+    width: 70%;
+    margin-top: 2rem;
+    padding: 1.5em;
+    background-color: #e1e1e1a5;
+    border-radius: 2em;
+    /* debug */
+    min-height: 300px;
+}
+
+/* regole lista */
+ul {
+    list-style: none;
+}
+.list {
+    padding: 0.5em 0.8em;
+    background-color: #ffffffa1;
+    border-radius: 0.5em;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* regole colonna icone */
+.col-icons {
+    display: flex;
+    gap: 1rem;
+}
