aggiunto hover alla lista

--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,16 @@ ul {
 }
 .list {
     padding: 0.5em 0.8em;
-    background-color: #ffffffa1;
+    background-color: #ffffff79;
     border-radius: 0.5em;
+    margin-bottom: 0.5rem;
     display: flex;
     justify-content: space-between;
+    transition: all 0.2s ease;
+}
+.list:hover {
+    background-color: #ffffff;
+    box-shadow: 0 0 0.5rem 0.2rem #278fd494;
 }
 
 /* regole colonna icone */
