aggiungo js a checkbox per fare una linea sulle task fatte

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,9 @@ ul {
 }
 
 /* regole colonne */
+.col-text {
+    text-decoration: line-through;
+}
 .col-icons {
     display: flex;
     align-items: center;
